update image and names

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Justica - Lawyer and Attorney Website Template</title>
+    <title>Value Re-Discovery - </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="Justica - Lawyer and Attorney Website Template" name="description" />
+    <meta content="Value Re-Discovery - Lawyer and Attorney Website Template" name="description" />
     <meta content="" name="keywords" />
     <meta content="" name="author" />
     <!--[if lt IE 9]>
@@ -64,7 +64,7 @@
                                 <div style="margin-bottom: 25px;" id="logo">
                                     <a href="index.html">
                                         <img alt="" class="logo" src="images/VREI LOGO 2 (1).png" />
-                                        <img alt="" class="logo-2" src="images/logo.png" />
+                                        <img alt="" class="logo-2" src="images/VREI LOGO 2 (1).png" />
                                     </a>
                                 </div>
                                 <!-- logo close -->
@@ -163,7 +163,7 @@
                             <span class="p-title">Welcome</span><br>
                             <h2>
                               Advocacy and Campaigns
-⦁	Research ⦁	<br>	Capacity Building⦁	
+                              ⦁ Research ⦁	<br>	Capacity Building⦁	
                          
                             </h2>
 
@@ -229,7 +229,7 @@
                         <div class="col-lg-5 offset-lg-7">
                             <span class="p-title">About</span><br>
                             <h2>
-                                About Value Discovery <br>
+                                About Value Re-Discovery <br>
                                 International
                             </h2>
                             <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
@@ -613,7 +613,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="widget">
-                            <a href="index.html"><img alt="" class="img-fluid mb20" src="images/logo-light.png"></a>
+                            <a href="index.html"><img alt="" class="img-fluid mb20" src="images/VREI LOGO 2 (1).png"></a>
                             <address class="s1">
                                 <span><i class="id-color fa fa-map-marker fa-lg"></i>Headquarters: Suite 2, Hatlab Place Wuse zone 5, Abuja, Nigeria.</span>
                                 <span><i class="id-color fa fa-phone fa-lg"></i>+1 333 9296</span>
@@ -655,7 +655,7 @@
                         <div class="col-md-12">
                             <div class="de-flex">
                                 <div class="de-flex-col">
-                                    &copy; Copyright 2021 - Justica by Designesia
+                                    &copy; Copyright 2021 - Value Re-Discovery by Designesia
                                 </div>
                                 <div class="de-flex-col">
                                     <div class="social-icons">
