--- a/views/index.ejs
+++ b/views/index.ejs
@@ -117,10 +117,10 @@
                                 <h3 class="id-color">Need Any Help?</h3>
                             </div>
                             <div class="tp-caption very-big-white" data-x="0" data-y="280" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_in="y:100px;opacity:0;s:500;e:Power2.easeOut;" data-transform_out="opacity:0;y:-100;s:400;e:Power2.easeInOut;" data-start="600" data-splitin="none" data-splitout="none" data-responsive_offset="on">
-                                <h1>We Fight for Right</h1>
+                                <h1>Everybody can be better</h1>
                             </div>
                             <div class="tp-caption" data-x="0" data-y="360" data-width="480" data-height="none" data-whitespace="wrap" data-transform_in="y:100px;opacity:0;s:500;e:Power2.easeOut;" data-transform_out="opacity:0;y:-100;s:600;e:Power2.easeInOut;" data-start="700">
-                                <p class="lead xs-hide">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <p class="lead xs-hide">focusing on the tasks of changing the leadership narratives with emphasis on political, <br>economic, social and cultural change</p>
                             </div>
                             <div class="tp-caption" data-x="0" data-y="450" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_in="y:100px;opacity:0;s:500;e:Power2.easeOut;" data-transform_out="opacity:0;y:-100;s:800;e:Power2.easeInOut;" data-start="800">
                                 <a class="btn-custom" href="features.html">Contact Us</a>
