add cpanel.yml file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Value Re-Discovery - </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="Value Re-Discovery - Lawyer and Attorney Website Template" name="description" />
+    <meta content="Emerging, visionary and transformative leadership" name="description" />
     <meta content="" name="keywords" />
     <meta content="" name="author" />
     <!--[if lt IE 9]>
