add update file image

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,20 +75,13 @@
                                     <li><a href="index.html">Home</a>
                                
                                     </li>
-                                    <li><a href="about.html">About</a>
-                                        <ul>
-                                            <li><a href="about.html">About Us</a></li>
-                                            <li><a href="faq.html">FAQ</a></li>
-                                        </ul>
+                                    <li><a href="/">About</a>
+        
                                     </li>
                                
-                                    <li><a href="news.html">News</a>
-                                        <ul>
-                                            <li><a href="news.html">News List</a></li>
-                                            <li><a href="news-single.html">News Single</a></li>
-                                        </ul>
+                                    <li><a href="/">News</a>
                                     </li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="/">Contact</a></li>
 
                                 </ul>
                                 <!-- mainmenu close -->
@@ -135,6 +128,26 @@
                          
                            
                         </li>
+                        <li data-transition="fade" data-slotamount="10" data-masterspeed="300" data-thumb="">
+                            <!--  BACKGROUND IMAGE -->
+                            <img alt="" class="rev-slidebg" data-bgposition="top center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" src="images/Charity.jpeg">
+                            <div class="tp-caption big-s1" data-x="0" data-y="230" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_in="y:100px;opacity:0;s:500;e:Power2.easeOut;" data-transform_out="opacity:0;y:-100;s:200;e:Power2.easeInOut;" data-start="500" data-splitin="none" data-splitout="none" data-responsive_offset="on">
+                                <h3 class="id-color">Charity</h3>
+                            </div>
+                            <div style="margin-top: 20px;" class="tp-caption very-big-white" data-x="0" data-y="280" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_in="y:100px;opacity:0;s:500;e:Power2.easeOut;" data-transform_out="opacity:0;y:-100;s:400;e:Power2.easeInOut;" data-start="600" data-splitin="none" data-splitout="none" data-responsive_offset="on">
+                                <h1>Supporting Internally <br>  Displaced persons <br> in Africa</h1>
+                            </div>  
+                        </li>
+                        <li data-transition="fade" data-slotamount="10" data-masterspeed="300" data-thumb="">
+                            <!--  BACKGROUND IMAGE -->
+                            <img alt="" class="rev-slidebg" data-bgposition="top center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" src="images/internallydisplaced.jpeg">
+                            <div class="tp-caption big-s1" data-x="0" data-y="230" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_in="y:100px;opacity:0;s:500;e:Power2.easeOut;" data-transform_out="opacity:0;y:-100;s:200;e:Power2.easeInOut;" data-start="500" data-splitin="none" data-splitout="none" data-responsive_offset="on">
+                                <h3 class="id-color">Charity</h3>
+                            </div>
+                            <div style="margin-top: 20px;" class="tp-caption very-big-white" data-x="0" data-y="280" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_in="y:100px;opacity:0;s:500;e:Power2.easeOut;" data-transform_out="opacity:0;y:-100;s:400;e:Power2.easeInOut;" data-start="600" data-splitin="none" data-splitout="none" data-responsive_offset="on">
+                                <h1>Supporting Internally <br>  Displaced persons <br> in Africa</h1>
+                            </div>  
+                        </li>
                     </ul>
                 </div>
             </section>
@@ -151,7 +164,7 @@
                     </div>
                 </div>
             </section>
-            <section id="section-highlight" class="relative text-light" data-bgcolor="#111111">
+            <section style="margin-top:-80px" id="section-highlight" class="relative text-light" data-bgcolor="#111111">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-md-4">
@@ -183,7 +196,6 @@
                                         <h3><i class="icofont-people"></i><span>Advocacy and Campaigns</span></h3>
                                         <p></p>
                                         <div class="spacer20"></div>
-                                        <a href="#" class="btn-custom capsule">Read more</a>
                                     </div>
                                 </div>
                                 <img src="images/services/1.jpg" alt="" class="img-responsive" />
@@ -196,7 +208,6 @@
                                         <h3><i class="icofont-home"></i><span>Research</span></h3>
                                         <p>.</p>
                                         <div class="spacer20"></div>
-                                        <a href="#" class="btn-custom capsule">Read more</a>
                                     </div>
                                 </div>
                                 <img src="images/services/2.jpg" alt="" class="img-responsive" />
@@ -209,7 +220,6 @@
                                         <h3><i class="icofont-car-alt-1"></i><span>⦁	Capacity Building</span></h3>
                                         <p>.</p>
                                         <div class="spacer20"></div>
-                                        <a href="#" class="btn-custom capsule">Read more</a>
                                     </div>
                                 </div>
                                 <img src="images/services/3.jpg" alt="" class="img-responsive" />
@@ -268,47 +278,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="image-container col-md-6 pull-right" data-bgimage="url(images/background/9.jpg) center"></div>
-            </section>
-            <section id="section-practice-areas">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="text-center">
-                                <h2>Practice Areas</h2>
-                                <div class="small-border"></div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 offset-md-3 text-center">
-                            <p>Consequat occaecat ullamco amet non eiusmod nostrud dolore irure incididunt est duis anim sunt officia. Fugiat velit proident aliquip nisi incididunt nostrud exercitation proident est nisi. Irure magna elit commodo anim ex veniam culpa.</p>
-                        </div>
-                        <div class="spacer-single"></div>
-                        <div class="col-md-4">
-                            <ul class="ul-style-2 wow fadeInRight" data-wow-delay=".2s">
-                                <li>Corporate and M&A</li>
-                                <li>Construction and Real Estate</li>
-                                <li>Commercial Duspute Resolution</li>
-                                <li>Employment</li>
-                            </ul>
-                        </div>
-                        <div class="col-md-4">
-                            <ul class="ul-style-2 wow fadeInRight" data-wow-delay=".4s">
-                                <li>Banking and Finance</li>
-                                <li>Captial Market</li>
-                                <li>Environmental</li>
-                                <li>Intellectual Property Right</li>
-                            </ul>
-                        </div>
-                        <div class="col-md-4">
-                            <ul class="ul-style-2 wow fadeInRight" data-wow-delay=".6s">
-                                <li>Goverment</li>
-                                <li>Foundation/Non Profit Organization</li>
-                                <li>Bankcuptcy</li>
-                                <li>Criminal</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+                <div style="height:700px" class="image-container col-md-4 pull-right" data-bgimage="url(images/mrOche.jpeg) center"></div>
             </section>
             <section data-bgimage="url(images/background/2.jpg) center" class="text-light" data-stellar-background-ratio=".2">
                 <div class="container">
@@ -434,7 +404,7 @@
                     </div>
                 </div>
             </section>
-            <section aria-label="section" class="text-light" data-bgimage="url(images/background/3.jpg) top" data-stellar-background-ratio=".2">
+            <section aria-label="section" class="text-light" data-bgimage="url(images/testimonials-bg.jpeg) top" data-stellar-background-ratio=".2">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
@@ -543,54 +513,18 @@
                             <div class="bloglist item">
                                 <div class="post-content">
                                     <div class="date-box">
-                                        <div class="m">10</div>
-                                        <div class="d">NOV</div>
+                                        <div class="m">12</div>
+                                        <div class="d">Dec</div>
                                     </div>
                                     <div class="post-image">
                                         <img alt="" src="images/news/1.jpg">
                                     </div>
                                     <div class="post-text">
-                                        <span class="p-tagline">Law Firm</span>
-                                        <h4><a href="news-single.html">The Lawyer European Awards shortlist<span></span></a></h4>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                        <span class="p-author">Fynley Wilkinson</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 mb30">
-                            <div class="bloglist item">
-                                <div class="post-content">
-                                    <div class="date-box">
-                                        <div class="m">15</div>
-                                        <div class="d">NOV</div>
-                                    </div>
-                                    <div class="post-image">
-                                        <img alt="" src="images/news/2.jpg">
-                                    </div>
-                                    <div class="post-text">
-                                        <span class="p-tagline">Law Firm</span>
-                                        <h4><a href="news-single.html">Six firms that are setting the trend<span></span></a></h4>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                        <span class="p-author">Fynley Wilkinson</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 mb30">
-                            <div class="bloglist item">
-                                <div class="post-content">
-                                    <div class="date-box">
-                                        <div class="m">20</div>
-                                        <div class="d">NOV</div>
-                                    </div>
-                                    <div class="post-image">
-                                        <img alt="" src="images/news/3.jpg">
-                                    </div>
-                                    <div class="post-text">
-                                        <span class="p-tagline">Law Firm</span>
-                                        <h4><a href="news-single.html">When it comes to law firm mergers<span></span></a></h4>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                        <span class="p-tagline">Charity</span>
+                                        <h4><a href="https://www.vanguardngr.com/2021/12/yuletide-ngos-donate-food-items-clothing-to-idps/">Food items donation and clothing to IDPs<span></span></a></h4>
+                                        <p>In our quest to provide solace to Internally Displaced Persons, IDPs, in Kuchingoro, Abuja, Value-Red,  in partnership with Sunfair Project,
+                                             have provided support to residents of the community with food items, 
+                                             clothes and a Christmas party.</p>
                                         <span class="p-author">Fynley Wilkinson</span>
                                     </div>
                                 </div>
@@ -611,22 +545,12 @@
                             <a href="index.html"><img alt="" class="img-fluid mb20" src="images/valuedLogo.png"></a>
                             <address class="s1">
                                 <span><i class="id-color fa fa-map-marker fa-lg"></i>Headquarters: Suite 2, Hatlab Place Wuse zone 5, Abuja, Nigeria.</span>
-                                <span><i class="id-color fa fa-phone fa-lg"></i>+1 333 9296</span>
+                                <span><i class="id-color fa fa-phone fa-lg"></i>+2349017332905</span>
                                 <span><i class="id-color fa fa-envelope-o fa-lg"></i><a href="mailto:contact@example.com">valuerediscoveryf@gmail.com; ochemeochei86@gmail.com
                                 </a></span>
                                 <span><i class="id-color fa fa-file-pdf-o fa-lg"></i><a href="#">Download Brochure</a></span>
                             </address>
                         </div>
-                    </div>
-                    <div class="col-md-4">
-                        <h5 class="id-color mb20">Practice Areas</h5>
-                        <ul class="ul-style-2">
-                            <li>Corporate and M&A</li>
-                            <li>Construction and Real Estate</li>
-                            <li>Commercial Duspute Resolution</li>
-                            <li>Employment</li>
-                            <li>Banking and Finance</li>
-                        </ul>
                     </div>
                     <div class="col-lg-4">
                         <div class="widget">
